style & fix: navbar alignment fix

--- a/src/components/organisms/navbar/navbar.scss
+++ b/src/components/organisms/navbar/navbar.scss
@@ -56,13 +56,6 @@
   width: 18.4rem;
 }
 
-.nav__btn {
-  button {
-    width: 8.75rem;
-    height: 3rem;
-  }
-}
-
 @media screen and (max-width: 1220px) {
   .nav {
     padding: 0.875rem 1rem;
@@ -78,6 +71,7 @@
 
   .nav__links {
     gap: 1rem;
+    height: 2rem;
 
     li {
       a {
@@ -94,7 +88,7 @@
   .nav__btn {
     button {
       width: 9rem;
-      height: 3rem;
+      height: 2rem;
       font-size: 1rem;
     }
   }
